--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,4 @@
+{% raw %}
 <!-- <!doctype html>
 <html>
     <head>
@@ -14,7 +15,7 @@
         {% endfor %}
     </body>
 </html> -->
-
+{% endraw %}
 
 <!-- With the base template in place, I can now simplify index.html by making it inherit from base.html -->
 {% extends "base.html" %}
